--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
         "tailwindcss": "^2.1.2",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "less": "^4.1.1",
+        "less-loader": "^8.1.1",
+        "notyf": "^3.9.0"
     }
 }
